--- a/hjem.html
+++ b/hjem.html
@@ -2,9 +2,12 @@
 <html>
 
 <head>
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
     <title>Posten</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="postmanKatt.css">
+    <link rel="stylesheet" href="slideshow.css">
 </head>
 
 <body>
@@ -23,6 +26,15 @@
 
 
     <div class="innhold">
+        <div id="slideshow">
+
+
+        </div>
+        <div id="postmanKatt">
+        </div>
+    </div>
+
+
 
     </div>
 
